# api-serv-cloud-infra

./: .gitignore  COMPLIANCE.yaml  README.md  alb.tf  autoscaling.tf  ecs-kong-service.tf  extensions:.yml  kong-task.tf  main.tf  outputs.tf  roles.tf  security.tf  variables.tf
.github/workflows/: apps-images.yml  deploy-dev.yml  deploy-sandbox.yml  ecr-images.yml  plan-dev.yml  plan-sandbox.yml  tf-plan.yml
apps/aws-secrets-injector/: Dockerfile  README.md  main.py  pyproject.toml
apps/aws-secrets-injector/services/: secretsmanager.py
apps/aws-secrets-injector/tests/: test_aws_secrets_injector.py
apps/loadtest/: README.md  locust.conf  locust.py
dockerfiles/: Dockerfile.aws-secrets-injector  Dockerfile.dp-query-api  Dockerfile.kong  Dockerfile.prom-metrics-proxy  Dockerfile.prometheus  Dockerfile.secrets-injector
dockerfiles/dp-query-api/: README.md  main.py  pyproject.toml
dockerfiles/scripts/: entrypoint-kong.sh
docs/: API_GATEWAY_ROUTING.md  aws-architecture.md  aws-intro.md  decom.md  dns-route53.md  vpc-to-vpc-conn.md
docs/assets/: AWS-arch-fargate.drawio  AWS-arch-routing-api-gateway.drawio
modules/aws/: alb.tf  api-gateway.tf  autoscaling.tf  cloudfront.tf  cloudwatch.tf  ecs-adot-prom-collector.tf  ecs-kong-service.tf  ecs-kong.tf  ecs-prometheus.tf  ecs.tf  kong-task.tf  main.tf  outputs.tf  policy.tf  redis.tf  roles.tf  security.tf  variables.tf  versions.tf
terraform/: provider.tf  terragrunt.hcl  versions.yml
terraform/dev/: terragrunt.hcl
terraform/sandbox/: terragrunt.hcl
