[tool.poetry]
name = "aws-secrets-injector"
version = "0.0.1"
description = ""
authors = ["Nithin Shekar Kuruba <nithinshekar.kuruba@gov.bc.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.21.24"
botocore = "^1.24.24"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
